Make fixed width of button to start overflowing correctly

--- a/trip-planner/src/pages/Budgets/styles/CreateEditBudget.css
+++ b/trip-planner/src/pages/Budgets/styles/CreateEditBudget.css
@@ -1,5 +1,5 @@
 .create-edit-budget-main-container { 
-    padding: 24px;
+    margin: 24px;
     width: 100%;
     height: 100%;
 }
